# case-wm

./: .gitignore  Cargo.toml  Makefile  Makefile.toml  README.md  rust-toolchain.toml
assets/: case-wm.desktop  casewm.desktop
case/: Cargo.toml
case/src/: lib.rs  main.rs
case_wm/: Cargo.toml
case_wm/src/: config.rs  lib.rs  main.rs  wm.rs
casewm/: Cargo.toml
casewm/src/: actions.rs  app.rs  bar.rs  layout.rs  lib.rs  main.rs  status_bar.rs  wm.rs
casewm/src/config/: bar.rs  colorscheme.rs  consts.rs  keys.rs  mod.rs  window.rs
casewm/src/utils/: dmenu_rs.rs  mod.rs
install-files/: casewm.desktop  casewm_startup.sh
install-files/picom/: picom.conf
scripts/: casewm_startup.sh  xephyr.sh
