[package]
name = "casewm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
penrose = "0.3.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "prepush-hook", "run-cargo-test", "run-cargo-clippy"]

[[bin]]
name = "case-wm"
path = "src/main.rs"
