[package]
name = "casewm"
version = "0.1.0"
edition = "2021"
rust-version = "1.68.2"
description = "Dynamic Tiling Window manager written in Rust for console cowboys navigating the sprawl"
homepage = "https://github.com/thebashpotato/case-wm"
repository = "https://github.com/thebashpotato/case-wm"
keywords = ["window manager", "penrose"]
license-file = "LICENSE"

[dependencies]
anyhow = "1.0.70"
penrose = { path = "/home/matt/Development/VersionControl/github/penrose/" }
penrose_ui = { path = "/home/matt/Development/VersionControl/github/penrose/crates/penrose_ui" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing = "0.1.37"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "prepush-hook", "run-cargo-test", "run-cargo-clippy"]

[profile.release]
codegen-units = 1
incremental = false
strip = true        # Automatically strip symbols from the binary.
opt-level = "z"     # Optimize for size
lto = true          # optimize at the linking stage
